--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 { "name": "map-to"
 , "version": "0.0.0"
-, "description": "map-to/array and map-to/object. Convert easily."
+, "description": "map-to/array and map-to/object. Convert easily, back and forth."
 , "license": "MIT"
 , "keywords":
   [ "object"
