--- a/package.json
+++ b/package.json
@@ -31,10 +31,10 @@
   }
 
 , "scripts":
-  { "test": "node test | tap-dot"
+  { "test": "node test | faucet"
   }
 , "devDependencies":
   { "tape": "3.0.3"
-  , "tap-dot": "0.2.3"
+  , "faucet": "0.0.1"
   }
 }
