--- a/package.json
+++ b/package.json
@@ -31,12 +31,11 @@
   }
 
 , "scripts":
-  { "test": "node test | faucet"
+  { "test": "node test"
   , "coveralls": "istanbul cover test --report lcovonly && coveralls < ./coverage/lcov.info"
   }
 , "devDependencies":
   { "tape": "3.0.3"
-  , "faucet": "0.0.1"
   , "coveralls": "2.11.2"
   , "istanbul": "0.3.5"
   }
