Gulp compilation to ES5 and ES6

--- a/package.json
+++ b/package.json
@@ -38,5 +38,9 @@
   { "tape": "3.0.3"
   , "coveralls": "2.11.2"
   , "istanbul": "0.3.5"
+
+  , "gulp": "3.8.10"
+  , "gulp-6to5": "2.0.0"
+  , "6-to-library": "0.2.0"
   }
 }
