--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 { "name": "as"
-, "version": "0.1.0"
+, "version": "0.2.0-alpha-01"
 , "description": "as/array and as/object. Convert easily, back and forth."
 , "license": "MIT"
 , "keywords":
