--- a/package.json
+++ b/package.json
@@ -44,7 +44,7 @@
 
   , "gulp": "3.8.10"
   , "gulp-6to5": "2.0.0"
-  , "6-to-library": "0.3.0-alpha"
+  , "6-to-library": "0.3.0"
   , "del": "1.1.1"
   }
 }
